--- a/templates/edit_asset.html
+++ b/templates/edit_asset.html
@@ -4,9 +4,9 @@
   <h1>Edit Asset</h1>
   {% from "includes/_formhelpers.html" import render_field %}
   <form method="POST" action="">
-    <div class="form-group">
+    <!-- <div class="form-group">
       {{ render_field(form.name, class_="form-control") }}
-    </div>
+    </div> -->
     <div class="form-group">
       {{ render_field(form.quantity, class_="form-control", id="editor") }}
     </div>
