--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,9 @@
  
 {% block body %}
   <h1>Dashboard <small> Welcome {{session.username}}</small></h1>
-  <a class="btn btn-success" href="/add_asset"> Add Asset</a>
+  {% if session.role != "Engineer"%}
+    <a class="btn btn-success" href="/add_asset"> Add Asset</a>
+  {% endif %}
   <hr>
   <table class="table table-striped">
     <tr>
@@ -19,18 +21,67 @@
         <td>{{asset.name}}</td>
         <td>{{asset.user}}</td>
         <td>{{asset.quantity}}</td>
-        {% if session.role != "Engineer"%}
-          <td><a href="edit_asset/{{asset.id}}" class="btn btn-default pull-right"><button value="Delete" href="edit_asset/{{asset.id}}" class="btn btn-danger">Edit</button></a></td>
+        {% if session.role != "Manager"%}
+        
+          <!-- <form action="{{url_for('edit_asset', id=asset.id)}}" method="post">
+            <input type="submit" value="consume" class="btn btn-success">
+          </form>
+        </td> -->
+          
+          <td><a href="edit_asset/{{asset.id}}" class="btn btn-default pull-right"><button value="Delete" href="edit_asset/{{asset.id}}" class="btn btn-success">Consume</button></a></td>
+       
         {% endif %}
         <td>
         {% if session.role != "Engineer" and session.role != "Manager" %}
           <form action="{{url_for('delete_asset', id=asset.id)}}" method="post">
-            <input type="hidden" name="_method" value="DELETE">
-            <input type="submit" value="Delete" class="btn btn-danger">
+            <!-- <input type="hidden" name="_method" value="DELETE"> -->
+            <!-- <input type="submit" value="Delete" class="btn btn-danger"> -->
+            <button value="Delete" href="edit_asset/{{asset.id}}" class="btn btn-danger">Delete</button>
           </form>
         {% endif %}
         </td>
       </tr>
     {% endfor %}
   </table>
+<!-- ------------------------------------------------------------------------------- -->
+{% if session.role != "Engineer" and session.role != "Manager" %}
+  <h1>Pending Requests</h1>
+  <table class="table table-striped">
+    <tr>
+      <th>ID</th>
+      <th>Name</th>
+      <th>UserName</th>
+      <th>Role</th>
+      <th></th>
+      <th></th>
+    </tr>
+    {% for req in requests %}
+      <tr>
+        <td>{{req.id}}</td>
+        <td>{{req.name}}</td>
+        <td>{{req.username}}</td>
+        <td>{{req.role}}</td>
+        
+        <!-- <td><button value="Approve"  class="btn btn-success">Approve</button></td> -->
+        
+        <td>
+        
+          <form action="{{url_for('approve_request', id=req.id)}}" method='POST'>
+            <input type="hidden" name="_method" value="Approve">
+            <input type="submit" value="Approve" class="btn btn-success">
+          </form>
+       
+        </td>
+        <td>
+        
+          <form action="{{url_for('reject_request', id=req.id)}}" method="post">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="submit" value="Delete" class="btn btn-danger">
+          </form>
+       
+        </td>
+      </tr>
+    {% endfor %}
+  </table>
+{% endif %}
 {% endblock %}
