--- a/templates/register.html
+++ b/templates/register.html
@@ -4,24 +4,28 @@
   <h1>Register</h1>
   {% from "includes/_formhelpers.html" import render_field %}
   <form method="POST" action="">
-    <div class="form-group">
-      {{render_field(form.role, class_="form-control")}}
-    </div>
-    <div class="form-group">
-      {{render_field(form.name, class_="form-control")}}
-    </div>
-    <div class="form-group">
-      {{render_field(form.email, class_="form-control")}}
-    </div>
-    <div class="form-group">
-      {{render_field(form.username, class_="form-control")}}
-    </div>
-    <div class="form-group">
-      {{render_field(form.password, class_="form-control")}}
-    </div>
-    <div class="form-group">
-      {{render_field(form.confirm, class_="form-control")}}
-    </div>
-    <p><input type="submit" class="btn btn-primary" value="Submit"></p>
-  </form>
+    <div class = 'grid-container'>
+      <div class="grid-item" id = 'reg_style'>
+        {{render_field(form.role, class_="form-control")}}
+      </div>
+      <div class="grid-item" id = 'reg_style'>
+        {{render_field(form.name, class_="form-control")}}
+      </div>
+      <div class="grid-item" id = 'reg_style'>
+        {{render_field(form.email, class_="form-control")}}
+      </div>
+      <div class="grid-item" id = 'reg_style'>
+        {{render_field(form.username, class_="form-control")}}
+      </div>
+      <div class="grid-item" id = 'reg_style'>
+        {{render_field(form.password, class_="form-control")}}
+      </div>
+      <div class="form-group">
+        {{render_field(form.confirm, class_="form-control")}}
+      </div>
+      <!-- <p><input type="submit" class="btn btn-primary" value="Submit"></p> -->
+      <p><input type="submit" class="btn btn-primary" value="Request Role"></p>
+    </form>
+    
+
 {% endblock %}
