--- a/templates/style2.css
+++ b/templates/style2.css
@@ -1,56 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Inventory Manager</title>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
-<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-<!-- <link rel="stylesheet" href="templates\style2.css"> -->
-<!-- <link rel="stylesheet" href="templates\style.css" /> -->
-<style>
-  /* CSS for asset table */
-  * {
-    box-sizing: content-box;
-  }
-  
-  #myInput {
-    background-image: url('/css/searchicon.png');
-    background-position: 10px 12px;
-    background-repeat: no-repeat;
-    width: 100%;
-    font-size: 16px;
-    padding: 12px 20px 12px 40px;
-    border: 1px solid #ddd;
-    margin-bottom: 12px;
-  }
-  
-  #myUL {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  #myUL li a {
-    border: 1px solid #ddd;
-    margin-top: -1px; /* Prevent double borders */
-    background-color: #f6f6f6;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px;
-    color: black;
-    display: block
-  }
-  
-  #myUL li a:hover:not(.header) {
-    background-color: #eee;
-  }
-
-/* CSS for modern UI */
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
 *{
@@ -69,21 +16,16 @@ body{
     flex-direction: column;
     height: 100vh;
 }
-.grid-container {
-  display: grid;
-}
+
 .container{
     background-color: #fff;
     border-radius: 30px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
     position: relative;
     overflow: hidden;
-    width: 1500px;
-    height: 800px;
-    /* height:1500px; */
-    max-width: 200%;
+    width: 768px;
+    max-width: 100%;
     min-height: 480px;
-    overflow: scroll;
 }
 
 .container p{
@@ -106,7 +48,7 @@ body{
 
 .container button{
     background-color: #512da8;
-    color: #ffffff;
+    color: #fff;
     font-size: 12px;
     padding: 10px 45px;
     border: 1px solid transparent;
@@ -120,7 +62,7 @@ body{
 
 .container button.hidden{
     background-color: transparent;
-    border-color: #2ff0a9;
+    border-color: #fff;
 }
 
 .container form{
@@ -266,60 +208,3 @@ body{
 .container.active .toggle-right{
     transform: translateX(200%);
 }
-
-  </style>
-
-  <!-- Style for nav link highlight -->
-
-  </head>
-  <body>
- {% include 'includes/_navbar.html' %}
- <div class="container">
-      {% include 'includes/_messages.html' %}
-      {% block body %}{% endblock %}
-    </div>
-<!-- <style>
-.container {padding-top:50px;}
-</style> -->
-
-<!-- script for asset table --------------------------------------------------------------------->
-<script type="text/javascript">
-$(document).ready(function() {
-    $('#articles').DataTable({     
-      "aLengthMenu": [[3, 5, 10, 25, -1], [3, 5, 10, 25, "All"]],
-        "iDisplayLength": 3
-       } 
-    );
-} );
- 
-CKEDITOR.replace('editor')
-</script>
-
-<!-- script for morderUI log regis------------------------------------------------------------ -->
-<script>
-  const container = document.getElementById('container');
-const registerBtn = document.getElementById('register');
-const loginBtn = document.getElementById('login');
-
-registerBtn.addEventListener('click', () => {
-    container.classList.add("active");
-});
-
-loginBtn.addEventListener('click', () => {
-    container.classList.remove("active");
-});
-</script>
-
-<!-- Script fro Navbar highlight -->
-<script>
-    const navbarLinks = document.querySelectorAll('.navbar navbar-expand-lg navbar-light bg-light a');
-    
-    navbarLinks.forEach(link => {
-      link.addEventListener('click', () => {
-        navbarLinks.forEach(navlink => navlink.classList.remove('nav-item active'));
-        link.classList.add('nav-item active');
-      });
-    });
-</script>
-  </body>
-</html>
